--- a/package.json
+++ b/package.json
@@ -10,15 +10,23 @@
     "dev": "webpack --mode development",
     "build": "webpack --mode production",
     "test": "jest ./tests",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "lint": "eslint --ext .ts ./lib ./tests",
+    "lint:fix": "eslint --fix --ext .ts ./lib ./tests"
   },
   "author": "Nabil",
   "license": "ISC",
   "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/jest": "^29.5.11",
     "@types/node": "^20.10.5",
+    "@typescript-eslint/eslint-plugin": "^6.16.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.2",
+    "eslint-plugin-unused-imports": "^3.0.0",
+    "husky": "^8.0.0",
     "jest": "^29.7.0",
-    "ts-jest": "^29.1.1",
-    "husky": "^8.0.0"
+    "prettier": "^3.1.1",
+    "ts-jest": "^29.1.1"
   }
 }
