--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
   "scripts": {
     "dev": "webpack --mode development",
     "build": "webpack --mode production",
-    "test": "jest ./tests",
+    "test": "jest ./tests --watch",
     "prepare": "husky install",
-    "lint": "eslint --ext .ts ./lib ./tests",
-    "lint:fix": "eslint --fix --ext .ts ./lib ./tests"
+    "lint": "eslint --ext .ts,.js  **/lib/**/*.ts **/tests/**/*.js",
+    "lint:fix": "eslint --fix --ext .ts,.js  **/lib/**/*.ts **/tests/**/*.js"
   },
   "author": "Nabil",
   "license": "ISC",
@@ -26,6 +26,7 @@
     "eslint-plugin-unused-imports": "^3.0.0",
     "husky": "^8.0.0",
     "jest": "^29.7.0",
+    "nodemon": "^3.0.2",
     "prettier": "^3.1.1",
     "ts-jest": "^29.1.1"
   }
